<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch_seher"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Seher"
        app:layout_constraintStart_toEndOf="@+id/switch_heiler"
        app:layout_constraintTop_toBottomOf="@+id/switch_wkind" />

    <Switch
        android:id="@+id/switch_heiler"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Heiler"
        app:layout_constraintStart_toEndOf="@+id/switch_hexe"
        app:layout_constraintTop_toBottomOf="@+id/switch_amor" />

    <Switch
        android:id="@+id/switch_wkind"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Kind"
        app:layout_constraintStart_toEndOf="@+id/switch_amor"
        app:layout_constraintTop_toBottomOf="@+id/textBürger" />

    <Switch
        android:id="@+id/switch_gbwolf"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/GBWolf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_wolfshund" />

    <Switch
        android:id="@+id/switch_werwolf"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Werwolf"
        app:layout_constraintStart_toEndOf="@+id/switch_gbwolf"
        app:layout_constraintTop_toBottomOf="@+id/switch_wwolf" />

    <Switch
        android:id="@+id/switch_urwolf"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Urwolf"
        app:layout_constraintStart_toEndOf="@+id/switch_wwolf"
        app:layout_constraintTop_toBottomOf="@+id/textWölfe" />

    <Switch
        android:id="@+id/switch_amor"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Amor"
        app:layout_constraintStart_toEndOf="@+id/switch_nutte"
        app:layout_constraintTop_toBottomOf="@+id/textBürger" />

    <Switch
        android:id="@+id/switch_nutte"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Nutte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBürger" />

    <Switch
        android:id="@+id/switch_hexe"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Hexe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_nutte" />

    <Switch
        android:id="@+id/switch_wolfshund"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Wolfshund"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWölfe" />

    <Switch
        android:id="@+id/switch_wwolf"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/WeißerWolf"
        app:layout_constraintStart_toEndOf="@+id/switch_wolfshund"
        app:layout_constraintTop_toBottomOf="@+id/textWölfe" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Buttonhelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addWolf"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/amountWolf"
        app:layout_constraintTop_toBottomOf="@+id/switch_urwolf" />

    <Button
        android:id="@+id/subWolf"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/switch_werwolf"
        app:layout_constraintTop_toBottomOf="@+id/switch_urwolf" />

    <EditText
        android:id="@+id/amountWolf"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="1"
        app:layout_constraintStart_toEndOf="@+id/subWolf"
        app:layout_constraintTop_toBottomOf="@+id/switch_urwolf" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="255dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Vorwort"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWölfe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Wölfe"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textBürger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Bürger"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_werwolf" />

</android.support.constraint.ConstraintLayout>